feat: batch endpoints v1
